sending in chunks works -> test with bigger files/stress test + CLEAN UP

--- a/root/styles/styles.css
+++ b/root/styles/styles.css
@@ -11,7 +11,7 @@ body, html {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url(../images/yeee.jpg);
+    background-image: url(../images/good_boi.jpeg);
     background-size: cover;
     opacity: 0.2; /* 20% transparency */
     z-index: -1; /* Behind the content */
