--- a/root/styles/styleIndex.css
+++ b/root/styles/styleIndex.css
@@ -13,7 +13,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url(../images/yeee.jpg);
+    background-image: url(../images/good_boi.jpeg);
     background-size: cover;
     opacity: 0.2; /* 20% transparency */
     z-index: -1; /* Behind the content */
